downgrade Android-sdk from 2.2 to 1.6

--- a/assets/donation.html
+++ b/assets/donation.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- https://flattr.com/support/integrate/js -->
+		<script type="text/javascript">
+		/* <![CDATA[ */
+		    (function() {
+		        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+		        s.type = 'text/javascript';
+		        s.async = true;
+		        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+		        t.parentNode.insertBefore(s, t);
+		    })();
+		/* ]]> */
+		</script>
 		<title>Donation</title>
 	</head>
 	<body>
@@ -11,6 +23,14 @@
 		But since I also have to pay rent and food etc.<br/>
 		Would a small donation from you, do wonders for me :)</p>
 		<hr/>
+		<h3>Flattr this app.</h3>
+		<a class="FlattrButton" style="display:none;" 
+		    title="Flattr Diaspora-Webclient"
+		    data-flattr-uid="Voidcode"
+		    data-flattr-category="software"
+		    href="https://github.com/voidcode/Diaspora-Webclient/">
+				Help me make more diaspora relateret stuff.
+		</a>
 		<h3>Donation via Paypal.</h3>
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 		<input type="hidden" name="cmd" value="_s-xclick">
